If a shard key index cannot be dropped then a user should not be able to hide that index

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • v6.1, v6.0, v5.0, v4.4
    • Sharding EMEA 2022-10-31, Sharding EMEA 2022-11-14
    • 135
    • 3
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      A hidden index helps users evaluate the potential impact of dropping an index without actually dropping the index. That way, the user can just unhide the index if the impact is bad. Hidden and dropped indexes should therefore have the same behavior.

      For sharding, however, we allow a shard key index that cannot be dropped to be hidden. In order to maintain consistency, we should not allow users to hide a shard key index that cannot be dropped.

            Assignee:
            Pol Pinol
            Reporter:
            Garaudy Etienne
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: