SERVER-68769 If the shard key index cannot be dropped, it cannot be hidden.